--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,15 @@ on:
 
 jobs:
   test:
+    strategy:
+      matrix:
+        go-version: [1.12.x, 1.19.x]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.19
+          go-version: ${{ matrix.go-version }}
       - name: Test
         run: go test -v ./...
